--- a/advnt.html
+++ b/advnt.html
@@ -50,7 +50,7 @@
 
           <section class="row bg-black hero" id="hero">
             <div class="col-md-12 my-auto position-relative text-center">
-              <img src="images/advnt/advnt.gif" alt="advnt logo" height="600" width="1200" class="img-fluid my-auto">
+              <img src="images/advnt/advnt.gif" alt="advnt logo" height="600" width="600" class="mt-5 my-auto img-fluid">
             </div>
           </section>
           <div class="mx-3"> <!-- overall margin -->
